force-app/main/default/objects/Schedule_Stop__c/Schedule_Stop__c.object-meta.xml
<CustomObject>
    <label>Schedule Stop</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Stop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>