force-app/main/default/objects/Schedule_Stop__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>