force-app/main/default/objects/Schedule_Stop__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schema repair v2 2026-04-30</description>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Schedule Stops</relationshipLabel>
    <relationshipName>Schedule_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>