force-app/main/default/objects/Schedule_Stop__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aqua tech assigned to this stop. Used to group stops into per-tech route cards.</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Schedule Stops</relationshipLabel>
    <relationshipName>Schedule_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>