force-app/main/default/objects/Schedule_Stop__c/fields/Estimated_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_Minutes__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Estimated Duration (Minutes)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>