force-app/main/default/objects/Schedule_Stop__c/fields/Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schema repair v2 2026-04-30</description>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Field Manager Schedule Stops</relationshipLabel>
    <relationshipName>Field_Manager_Schedule_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>