force-app/main/default/objects/Schedule_Stop__c/fields/GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Latitude__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>GPS Latitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>