force-app/main/default/objects/Schedule_Stop__c/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>GPS Longitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>