force-app/main/default/objects/Schedule_Stop__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lot this stop services. Used for stop title display and location lookup.</description>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Schedule Stops</relationshipLabel>
    <relationshipName>Schedule_Stops_Lot</relationshipName>
    <type>Lookup</type>
</CustomField>