force-app/main/default/objects/Schedule_Stop__c/fields/Route_Status__c.field-meta.xml
<CustomField>
    <fullName>Route_Status__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Route Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
                <default>true</default>
                <label>Proposed</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>In Route</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>