force-app/main/default/objects/Schedule_Stop__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Schedule Day</label>
    <referenceTo>Schedule_Day__c</referenceTo>
    <relationshipLabel>Schedule Stops</relationshipLabel>
    <relationshipName>Schedule_Stops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>