force-app/main/default/objects/Schedule_Stop__c/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>