force-app/main/default/objects/Schedule_Stop__c/fields/Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Stop_Number__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Stop Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>