force-app/main/default/objects/Schedule_Stop__c/fields/Stop_Type__c.field-meta.xml
<CustomField>
    <fullName>Stop_Type__c</fullName>
    <description>Type of service stop: Install, Check, Same-Day, Depot, or Other.</description>
    <label>Stop Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>