force-app/main/default/objects/Schedule_Stop__c/fields/Traffic_Risk__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Risk__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Traffic Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>